# CinePosto

./: .gitignore  README.md
.github/workflows/: ci.yml
app/: .gitignore  App.js  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
app/assets/: gen_logos.py  icon_post.txt  icon_space.txt  logo_uci.txt
backend/: .env.example  .gitignore  README.md  requirements.txt  ruff.toml
backend/app/: config.py  database.py  main.py  seed_from_json.py
backend/tests/: conftest.py  test_repositories.py  test_routers.py
docs/: CONTINUAZIONE-PROGETTUALE.md  PIANO-CONSEGNA-14LUGLIO.md  development.md  esposizione-discorsi.md  frontend-integration.md  index.md  panoramica.md  presentazione-14-luglio.md  presentazione-14-luglio.pptx
docs/app/: integrazione-e-fix.md  overview.md
scraper/: .gitignore  README.md  healthcheck.py  pyproject.toml  report.py  validate_output.py
scraper/.github/workflows/: ci.yml
scraper/deploy/: cineposto-scraper-logrotate  cineposto-scraper.service  cineposto-scraper.timer  setup.sh
scraper/output/: cinemas.json  films.json  movies.json  showings.json
scraper/scraper/: __init__.py  browser.py  config.py  delta.py  errors.py  http.py  main.py  metadata.py  models.py  normalizer.py
scraper/scraper/connectors/: base.py  postmodernissimo.py  thespace.py  uci.py
scraper/tests/: test_config.py  test_delta.py  test_fix_validation.py  test_http.py  test_metadata.py  test_models.py  test_normalizer.py  test_postmod_detail_reconcile.py  test_postmodernissimo.py  test_thespace.py  test_uci.py
worker/: Makefile
(+51 files in other folders)
